# nlse-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
cmake/: CompileFlags.cmake
examples/: CMakeLists.txt  cuda_info.cu  fibre_2mode.cpp  fibre_2mode_gpu.cu  fibre_2mode_input_pulse_opt.cpp  fibre_nmode_gpu.cu
examples/data/: Sk_tensor_20modes.txt  Sk_tensor_2modes.txt  beta5x30.txt
scripts/: comparison_plot.py  load_S_tensors.py  plot.py  plot_mpa.py
src/: CMakeLists.txt
src/ode/: CMakeLists.txt  GPUMultimodeNLSE.hpp  InitialCondition.hpp  MultimodeNLSE.cpp  MultimodeNLSE.hpp
test/: CMakeLists.txt
test/ode/: MultimodeNLSE_gputest.cu
